# rosclaw

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v1.0.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  G1_FALL_RECOVERY_PLAN.md  HOW模块验收自评报告.md  INSTALL.md  KNOW反思报告.md  LICENSE  MUJOCO_LOG.TXT  Makefile  P0_CLAUDE_CODE_AGENT_HELP.md  PHASE1_REPORT.md  QUICKSTART.md  README.md  README.zh.md  ROSCLAW.md  ROSCLAW_LEROBOT_P0_1_FINAL_REPORT.md  ROSCLAW_LEROBOT_P0_1_RUNTIME_ISOLATION_REPORT.md  ROSCLAW_LEROBOT_P1_1_REAL_POLICY_SMOKE_REPORT.md  ROSCLAW_LEROBOT_P1_PROVIDER_WORKER_REPORT.md  ROSCLAW_LEROBOT_P2_DATASET_WRITER_REPORT.md  ROSCLAW_LEROBOT_P4_POLICY_RUNTIME_REPORT.md  ROSCLAW_LEROBOT_ROUND1_REPORT.md  ROSClaw_v1.0_颠覆性证明.md  Swarm模块反思报告.md  THIRD_PARTY.md  VALIDATION_REPORT_v1.0_FINAL.md  docker-compose.ros-test.yml  docker-compose.ros1-test.yml  docker-compose.yml  generate_realsense_skills.py  install.sh  mcp.json  pyproject.toml  (+6 more)
.claude-flow/data/: auto-memory-store.json  graph-state.json  pending-insights.jsonl  ranked-context.json
.claude-flow/sessions/: current.json
.claude/backup/: test_g1_edge_cases.py
.codex/: config.toml
.github/: mypy-ci.ini
.github/workflows/: ci.yml  fetch-assets.yml  firstboot-acceptance.yml
benchmarks/: ROSClaw_v1.0_RC_Acceptance_Report.md  corebench_memory_stress.py  dell7960_report.md  dell7960_results.json  dell7960_stress_test.py  integration_performance.py  integration_results.md  v1_0_functional_test_report.md
benchmarks/memory/: benchmark_results.json  dataset.jsonl  evaluate.py  generate_dataset.py  generate_dataset_v3.py  generate_dataset_v3_run2.py  queries.jsonl  relevance_labels.jsonl  run_bakeoff_v3.py  run_benchmark.py
configs/: bridge_compatibility_v1.yaml  rh56_can_v1.yaml  rh56_left_01_calibration.yaml  rh56_left_rs485_v1.yaml  rh56_right_01_calibration.yaml  rh56_right_rs485_v1.yaml
configs/choreography/: rh56_rps_v1.yaml
configs/regimes/: rh56_rps_v1.yaml
configs/simforge/: g1_goalforge.yaml
data/knowledge_assets/: bridge_index.json  embodiments.yaml  evidence_stats.json  failure_taxonomy.yaml  hint_features.yaml  (+7 more)
docker/: ros-entrypoint.sh  ros1-noetic-bridge.Dockerfile  ros1-noetic-launch.launch  ros2-humble-bridge.Dockerfile  ros2-humble-gazebo.Dockerfile  rosclaw-core.Dockerfile
docs/: API_IMPROVEMENTS.md  API_REFERENCE.md  APPS.md  ARCHITECTURE_AUDIT.md  ASSETS.md  BENCHMARK.md  BODYSENSE_SCHEMA.md  CLI.md  CLI_COMMANDS.md  CODE_REVIEW.md  COLLABORATION_LOG.md  DEEP_USER_TEST.md  DELL_DEPLOY.md  DESIGN_SPRINT3_5.md  E2E_TEST_FINDINGS.md  EVENT_BUS_TEST_PLAN.md  EXAMPLE_WORKFLOW.md  FINAL_ACCEPTANCE.md  FINAL_RELEASE.md  FINAL_VERIFICATION.md  FIRSTBOOT.md  G1_SENSE_DEMO.md  GAP_ANALYSIS.md  HARDWARE_MCP_ONBOARDING.md  INTEGRATION_GUIDE.md  INTEGRATION_QUALITY_REPORT.md  MCP_USAGE.md  OPENCLAW_INTEGRATION.md  P0_AGENT_INTEGRATION.md  PRODUCT_STATUS.md  README.md  RELEASE_CHECKLIST.md  REPOSITORY_LAYOUT.md  ROADMAP_v1.1.md  ROBOT_PACKS.md  ROLE_SWAP_REVIEW.md  ROSCLAWD.md  ROS_CONNECTOR.md  ROS_INTEGRATION_TESTING.md  SAFETY.md  (+8 more)
examples/: control_pid_arm_demo.py  demo_how_recovery_loop.py  demo_mcp_closed_loop.py  demo_provider_mcp.py  demo_swarm_combat_task.py  hello_robot.py  integration_verification_demo.py  mobile_robot_pid_demo.py
experiments/: maniskill_autotuning_benchmark.py  maniskill_autotuning_results.json  maniskill_fullstack_benchmark.py  maniskill_fullstack_results.json  maniskill_pickcube_benchmark.py  maniskill_pickcube_results.json
reports/: P2.1_Gate_A_Implementation_Report.md  P2.1_Gate_B_Implementation_Report.md  ROSClaw_RealSense_MVP_Fix_Report.json  ROSClaw_RealSense_MVP_Fix_Report.md  hub_help_list.md  hub_progress.md  hub_validation_report.md  issue_closure_table.csv
scripts/: acceptance_firstboot.sh  capture_ros2_image.py  get.sh  install.sh  integration_test.py  p10_body_mcp_skill.py  p12_practice.py  p8_single_camera.py  p9_dual_camera.py  phase1_install_realsense.sh  phase2_validate_hardware.sh  phase2b_validate_d405.sh  setup_lerobot_rh56.sh  start_dashboard.py  test_cosmos_realsense_image.py  test_ros2_boundary_fault.py  test_ros2_e2e.py  test_ros2_episode_recorder.py  test_ros2_multi_node.py  test_ros2_resource_leak.py  test_ros2_ur5_mcp_tools.py
src/rosclaw_vla/: __init__.py  action_parser.py  openvla_adapter.py  pyproject.toml  service.py
src/rosclaw_vla/demo/: __init__.py  conversation_interface.py  so101_real.py  so101_sim.py
src/rosclaw_vla/policies/: __init__.py  base.py  openvla.py
src/rosclaw_vla/rosclaw_vla/demo/: e2e_demo.py
tests/: _ros2_env.py  conftest.py  test_action_guard.py  test_agent_runtime.py  test_ai_collaboration.py  test_basic_critic.py  test_bench_realsense_metric_semantics.py  test_bench_realsense_rs_data_collect_parser.py  test_capability.py  test_capability_client.py  test_cli.py  test_cli_coverage.py  test_core.py  test_cosmos_schema_fallback.py  test_dashboard.py  test_dashboard_artifact_serving.py  test_dashboard_metrics.py  test_dashboard_no_mock_realsense.py  test_dashboard_practice_api.py  test_dashboard_realsense_api.py  test_dashboard_webserver.py  test_data_layer.py  test_docs_assets.py  test_doctor_default_realsense.py  test_doctor_realsense_checks.py  test_e2e_full_pipeline.py  test_e_urdf.py  test_edge_cases_eurdf.py  test_edge_cases_eventbus.py  test_embedder_warmup.py  test_episode_recorder.py  test_eurdf_loader_extended.py  test_eurdf_parser_coverage.py  test_event_bus_coverage.py  test_event_bus_extended.py  test_event_sink.py  test_eventbus_stress.py  test_eventbus_thread_safety.py  test_firewall.py  test_firewall_decorator_coverage.py  (+153 more)
tutorials/: 01_getting_started.md  02_skills_and_practice.md
worker_plugins/: README.md
worker_plugins/lerobot_policy_rosclaw_rh56/: README.md  pyproject.toml
worker_plugins/lerobot_policy_rosclaw_rh56/policies/rh56_reference_policy_v1/: README.md  policy_preprocessor.json
worker_plugins/lerobot_policy_rosclaw_rh56/src/lerobot_policy_rosclaw_rh56/: __init__.py  configuration_rosclaw_rh56_reference.py  modeling_rosclaw_rh56_reference.py
(+2245 files in other folders)
