[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosclaw"
version = "1.0.1"
description = "Self-Evolving Runtime Infrastructure for Physical AI & Embodied Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ROSClaw Team", email = "ai@rosclaw.io"},
]
keywords = ["robotics", "ros2", "mcp", "llm", "embodied-ai", "physical-ai", "mujoco", "runtime", "eurdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "jieba",
    "numpy>=1.24.0",
    "mujoco>=3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
    "websocket-client>=1.0.0",
    "openai>=1.0.0",
    "rosclaw-know>=1.0.2",
    "rosclaw-how>=1.0.2",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "semver>=3.0.0",
    "filelock>=3.0.0",
]

[project.optional-dependencies]
ros2 = [
    "rclpy>=3.0.0",
    "geometry-msgs",
    "sensor-msgs",
    "std-msgs",
    "trajectory-msgs",
    "control-msgs",
]
practice = [
    "rosclaw-practice @ git+https://github.com/ros-claw/rosclaw-practice.git@bfb4ac7",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "jsonschema>=4.0.0",
    "rank-bm25>=0.2",
    "Pillow>=10.0",
    "httpx2>=2.0.0",
]
dashboard = [
    "rosclaw-dashboard>=1.0.0",
]
all = [
    "rosclaw[ros2,dev,dashboard]",
]

[project.scripts]
rosclaw = "rosclaw.cli:main"
rosclaw-ur5-mcp = "rosclaw.mcp.ur5_server:main"
rosclaw-mcp = "rosclaw.mcp.minimal_server:main"
rosclaw-mcp-serve = "rosclaw.mcp.server:main"

[project.entry-points."rosclaw.runtime_handlers"]
rosclaw_builtin = "rosclaw.runtime.handlers"

[project.urls]
Homepage = "https://rosclaw.io"
Repository = "https://github.com/ros-claw/rosclaw"
Documentation = "https://docs.rosclaw.io"
"Bug Tracker" = "https://github.com/ros-claw/rosclaw/issues"
"Contact" = "mailto:ai@rosclaw.io"

[tool.hatch.build.targets.wheel]
packages = ["src/rosclaw"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"e-urdf-zoo" = "rosclaw/eurdf_zoo_data"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/bin",
    "/e-urdf-zoo",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rosclaw"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/rosclaw/hub"]

[[tool.mypy.overrides]]
module = "rosclaw.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "rosclaw.hub.*"
follow_imports = "normal"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/legacy"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-p no:launch-testing-ros -p no:launch-testing -p no:ament-pep257 -p no:ament-lint -p no:ament-copyright -p no:ament-flake8 -p no:ament-xmllint -m 'not integration and not deployment'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as requiring external services (deselect with '-k not integration')",
    "legacy_rclpy: marks tests that depend on the legacy rclpy-based ROS2 driver layer",
    "deployment: marks tests that deploy the Docker ROS test stack (deselect with '-m \"not deployment\"')",
]
