"""ROSClaw VLA - Vision-Language-Action Service Layer.

This package provides VLA model integration for ROSClaw,
enabling natural language robot control through vision.
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosclaw-vla"
version = "0.1.0"
description = "Vision-Language-Action service layer for ROSClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ROSClaw Team" },
]
keywords = ["robotics", "vla", "vision-language-action", "ros", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
openvla = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
sim = [
    "mujoco>=3.0.0",
    "imageio>=2.31.0",
]
real = [
    "opencv-python>=4.8.0",
]
web = [
    "aiohttp>=3.9.0",
]
all = [
    "rosclaw-vla[openvla,dev,sim,real,web]",
]

[project.scripts]
rosclaw-vla-sim = "rosclaw_vla.demo.so101_sim:main"
rosclaw-vla-real = "rosclaw_vla.demo.so101_real:main"
rosclaw-vla-chat = "rosclaw_vla.demo.conversation_interface:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rosclaw_vla"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
