[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-policy-rosclaw-rh56"
version = "0.1.0"
description = "Deterministic RH56 reference policy plugin for LeRobot (ROSClaw P5)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
